--- a/packages/openapi-typescript-plugin/package.json
+++ b/packages/openapi-typescript-plugin/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@openapi-qraft/plugin": "workspace:^",
     "commander": "^11.1.0",
     "openapi-typescript": "7.0.0-next.7"
   },
@@ -31,10 +32,15 @@
   },
   "files": [
     "dist",
-    "bin.mjs"
+    "src",
+    "!dist/**/*.test.*",
+    "!dist/**/*.spec.*",
+    "!src/**/*.test.*",
+    "!src/**/*.spec.*"
   ],
   "exports": {
     "./package.json": "./package.json",
+    ".": "./dist/index.js",
     "./*": "./dist/*.js"
   },
   "typesVersions": {
