--- a/packages/plugin/tsconfig.build.json
+++ b/packages/plugin/tsconfig.build.json
@@ -2,7 +2,8 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "noEmit": false,
-    "declaration": true
+    "declaration": true,
+    "declarationMap": true
   },
   "exclude": ["src/**/*.spec.ts", "src/**/*.test.ts", "src/tmp/**"]
 }
