--- a/packages/react-client/package.json
+++ b/packages/react-client/package.json
@@ -9,8 +9,8 @@
     "test:coverage": "vitest run --coverage",
     "typecheck": "tsc --noEmit",
     "lint": "eslint",
-    "generate-qraft": "openapi-qraft --plugin tanstack-query-react ../test-fixtures/openapi.json --clean -o src/tests/fixtures/api --openapi-types-import-path '../openapi.js' --explicit-import-extensions --filter-services '/approval_policies/**,/entities/**,/files/**,!/internal/**' && prettier --write src/tests/fixtures/api/**/*.ts",
-    "generate-types": "openapi-qraft --plugin openapi-typescript ../test-fixtures/openapi.json -o src/tests/fixtures/api"
+    "generate-api": "openapi-qraft --plugin tanstack-query-react --plugin openapi-typescript ../test-fixtures/openapi.json -o src/tests/fixtures/api --openapi-types-import-path '../openapi.js' --explicit-import-extensions --filter-services '/approval_policies/**,/entities/**,/files/**,!/internal/**' && yarn _prettify-api",
+    "_prettify-api": "prettier --write src/tests/fixtures/api/**/*.ts"
   },
   "type": "module",
   "sideEffects": false,
