--- a/packages/plugin/package.json
+++ b/packages/plugin/package.json
@@ -12,6 +12,7 @@
   },
   "exports": {
     "./package.json": "./package.json",
+    ".": "./dist/index.js",
     "./*": "./dist/*.js"
   },
   "typesVersions": {
