--- a/packages/tanstack-query-react-plugin/package.json
+++ b/packages/tanstack-query-react-plugin/package.json
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "@openapi-qraft/eslint-config": "workspace:~",
+    "@openapi-qraft/test-fixtures": "workspace:~",
     "eslint": "^9.0.0",
     "memfs": "^4.9.2",
     "rimraf": "^5.0.5",
