--- a/packages/tanstack-query-react-plugin/tsconfig.build.json
+++ b/packages/tanstack-query-react-plugin/tsconfig.build.json
@@ -5,5 +5,5 @@
     "declaration": true,
     "declarationMap": true
   },
-  "exclude": ["src/**/*.spec.ts", "src/**/*.test.ts", "src/tmp/**"]
+  "exclude": ["src/**/*.spec.ts", "src/**/*.test.ts", "src/tmp/**", "src/__snapshots__/**/*"]
 }
