--- a/packages/tanstack-query-react-plugin/tsconfig.json
+++ b/packages/tanstack-query-react-plugin/tsconfig.json
@@ -7,5 +7,6 @@
     "declaration": true,
     "resolveJsonModule": true,
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*"],
+  "exclude": ["src/__snapshots__/**/*"]
 }
