--- a/packages/plugin/package.json
+++ b/packages/plugin/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "ansi-colors": "^4.1.3",
     "camelcase": "^8.0.0",
+    "commander": "^11.1.0",
     "micromatch": "^4.0.5",
     "openapi-typescript": "7.0.0-next.11",
     "ora": "^8.0.1",
