--- a/playground/package.json
+++ b/playground/package.json
@@ -9,9 +9,8 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "typecheck": "tsc --noEmit",
-    "generate-types": "openapi-typescript https://raw.githubusercontent.com/swagger-api/swagger-petstore/7767363b841961221a38c0be9c6b1066a5120051/src/main/resources/openapi.yaml -o src/api/schema.d.ts",
-    "generate-qraft": "openapi-qraft https://raw.githubusercontent.com/swagger-api/swagger-petstore/7767363b841961221a38c0be9c6b1066a5120051/src/main/resources/openapi.yaml --clean -o src/api --openapi-types-import-path '../../../schema.d.ts'",
-    "e2e:pre-build": "npm run generate-types && npm run generate-qraft"
+    "generate-qraft": "openapi-qraft --plugin tanstack-query-react --plugin openapi-typescript https://raw.githubusercontent.com/swagger-api/swagger-petstore/7767363b841961221a38c0be9c6b1066a5120051/src/main/resources/openapi.yaml --clean -o src/api --openapi-types-import-path '../schema.d.ts' --openapi-types-file-name schema.d.ts",
+    "e2e:pre-build": "npm run generate-qraft"
   },
   "dependencies": {
     "@openapi-qraft/cli": "workspace:~",
