--- a/packages/react-client/tsconfig.build.json
+++ b/packages/react-client/tsconfig.build.json
@@ -2,6 +2,7 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "noEmit": false,
+    "declarationDir": "dist/types",
     "declaration": true,
     "declarationMap": true,
   },
