--- a/packages/react-client/package.json
+++ b/packages/react-client/package.json
@@ -25,7 +25,6 @@
     "@types/react": "^18.2.47",
     "@vitejs/plugin-react": "latest",
     "@vitest/coverage-v8": "^1.1.3",
-    "esbuild-plugin-file-path-extensions": "^2.1.1",
     "eslint": "^9.0.0",
     "globals": "^15.0.0",
     "jsdom": "latest",
@@ -49,18 +48,14 @@
     "!src/tests/**"
   ],
   "type": "module",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
   "types": "dist/types/index.d.ts",
-  "main": "dist/cjs/index.cjs",
   "exports": {
     ".": {
-      "import": {
-        "types": "./dist/types/index.d.ts",
-        "default": "./dist/esm/index.js"
-      },
-      "require": {
-        "types": "./dist/types/index.d.ts",
-        "default": "./dist/cjs/index.cjs"
-      }
+      "import": "./dist/esm/index.js",
+      "require": "./dist/cjs/index.js",
+      "types": "./dist/types/index.d.ts"
     },
     "./package.json": "./package.json"
   },
