--- a/playground/package.json
+++ b/playground/package.json
@@ -10,7 +10,8 @@
     "preview": "vite preview",
     "typecheck": "tsc --noEmit",
     "generate-qraft": "openapi-qraft --plugin tanstack-query-react --plugin openapi-typescript https://raw.githubusercontent.com/swagger-api/swagger-petstore/7767363b841961221a38c0be9c6b1066a5120051/src/main/resources/openapi.yaml --clean -o src/api --openapi-types-import-path '../schema.d.ts' --openapi-types-file-name schema.d.ts",
-    "e2e:pre-build": "npm run generate-qraft"
+    "e2e:pre-build": "npm run generate-qraft",
+    "e2e:post-build": "echo 'No post-build command'"
   },
   "dependencies": {
     "@openapi-qraft/cli": "workspace:~",
