--- a/packages/react-client/package.json
+++ b/packages/react-client/package.json
@@ -49,14 +49,9 @@
     "!src/tests/**"
   ],
   "type": "module",
-  "exports": {
-    ".": {
-      "import": "./dist/esm/index.js",
-      "require": "./dist/cjs/index.cjs",
-      "types": "./dist/types/index.d.ts"
-    },
-    "./package.json": "./package.json"
-  },
+  "main": "dist/cjs/index.cjs",
+  "module": "dist/esm/index.js",
+  "types": "dist/types/index.d.ts",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/OpenAPI-Qraft/openapi-qraft.git",
