--- a/playground/package.json
+++ b/playground/package.json
@@ -9,9 +9,10 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "typecheck": "tsc --noEmit",
-    "generate-qraft": "openapi-qraft --plugin tanstack-query-react --plugin openapi-typescript https://raw.githubusercontent.com/swagger-api/swagger-petstore/7767363b841961221a38c0be9c6b1066a5120051/src/main/resources/openapi.yaml --clean -o src/api --openapi-types-import-path '../schema.d.ts' --openapi-types-file-name schema.d.ts",
-    "e2e:pre-build": "npm run generate-qraft",
-    "e2e:post-build": "echo 'No post-build command'"
+    "codegen": "openapi-qraft --plugin tanstack-query-react --plugin openapi-typescript https://raw.githubusercontent.com/swagger-api/swagger-petstore/7767363b841961221a38c0be9c6b1066a5120051/src/main/resources/openapi.yaml --clean -o src/api --openapi-types-import-path '../schema.d.ts' --openapi-types-file-name schema.d.ts",
+    "e2e:pre-build": "npm run codegen",
+    "e2e:post-build": "echo 'No post-build command'",
+    "clean": "rimraf dist/"
   },
   "dependencies": {
     "@openapi-qraft/cli": "workspace:~",
@@ -32,6 +33,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "openapi-typescript": "latest",
+    "rimraf": "^5.0.5",
     "typescript": "^5.2.2",
     "vite": "^5.2.6"
   }
