--- a/e2e/projects/typescript-commonjs-node/package.json
+++ b/e2e/projects/typescript-commonjs-node/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "typescript": "latest",
     "@openapi-qraft/cli": "latest",
-    "@openapi-qraft/react": "latest"
+    "@openapi-qraft/react": "latest",
+    "@types/node": "latest"
   },
   "repository": {
     "type": "git",
