--- a/e2e/projects/typescript-esm-node-next/package.json
+++ b/e2e/projects/typescript-esm-node-next/package.json
@@ -9,12 +9,13 @@
     "build": "tsc",
     "codegen": "openapi-qraft --plugin tanstack-query-react --plugin openapi-typescript https://raw.githubusercontent.com/swagger-api/swagger-petstore/7767363b841961221a38c0be9c6b1066a5120051/src/main/resources/openapi.yaml --clean -o src/api --openapi-types-import-path '../schema.d.ts' --explicit-import-extensions --openapi-types-file-name schema.d.ts",
     "e2e:pre-build": "npm run codegen",
-    "e2e:post-build": " node ./dist/index.js && node ./dist/commonjs-client.cjs"
+    "e2e:post-build": " node ./dist/index.js"
   },
   "dependencies": {
     "typescript": "latest",
     "@openapi-qraft/cli": "latest",
-    "@openapi-qraft/react": "latest"
+    "@openapi-qraft/react": "latest",
+    "@types/node": "latest"
   },
   "repository": {
     "type": "git",
