--- a/packages/react-client/package.json
+++ b/packages/react-client/package.json
@@ -50,9 +50,24 @@
     "!src/tests/**"
   ],
   "type": "module",
-  "main": "dist/cjs/index.cjs",
-  "module": "dist/esm/index.js",
-  "types": "dist/types/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/esm/index.js",
+      "require": "./dist/cjs/index.cjs"
+    },
+    "./callbacks/*": {
+      "import": "./dist/esm/callbacks/*.js",
+      "require": "./dist/cjs/callbacks/*.cjs"
+    },
+    "./package.json": "./package.json"
+  },
+  "typesVersions": {
+    "*": {
+      "*": [
+        "dist/types/*"
+      ]
+    }
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/OpenAPI-Qraft/openapi-qraft.git",
