--- a/e2e/projects/typescript-commonjs-node/package.json
+++ b/e2e/projects/typescript-commonjs-node/package.json
@@ -12,10 +12,10 @@
     "e2e:post-build": "node ./dist/index.js"
   },
   "dependencies": {
-    "typescript": "latest",
     "@openapi-qraft/cli": "latest",
     "@openapi-qraft/react": "latest",
-    "@types/node": "latest"
+    "@types/node": "latest",
+    "typescript": "latest"
   },
   "repository": {
     "type": "git",
