chore: update package.json excluded "files"

--- a/packages/openapi-typescript-plugin/package.json
+++ b/packages/openapi-typescript-plugin/package.json
@@ -45,6 +45,7 @@
     "!dist/**/*.test.*",
     "!dist/**/*.spec.*",
     "!src/**/*.test.*",
+    "!src/**/__snapshots__/**",
     "!src/**/*.spec.*"
   ],
   "packageManager": "yarn@4.0.2"
