--- a/packages/plugin/package.json
+++ b/packages/plugin/package.json
@@ -47,6 +47,7 @@
     "src",
     "!dist/**/*.test.*",
     "!dist/**/*.spec.*",
+    "!src/**/__snapshots__/**",
     "!src/**/*.test.*",
     "!src/**/*.spec.*"
   ],
