RELEASING: Releasing 5 package(s)
Releases:
  @openapi-qraft/plugin@1.12.0-beta.0
  @openapi-qraft/react@1.12.0-beta.0
  @openapi-qraft/tanstack-query-react-plugin@1.12.0-beta.0
  @openapi-qraft/cli@1.12.0-beta.0
  @openapi-qraft/openapi-typescript-plugin@1.0.5-beta.0

--- a/packages/react-client/package.json
+++ b/packages/react-client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@openapi-qraft/react",
-  "version": "1.11.0",
+  "version": "1.12.0-beta.0",
   "description": "API client for React, providing type-safe requests and dynamic Tanstack Query React Hooks via a modular, Proxy-based architecture.",
   "scripts": {
     "build": "NODE_ENV=production rollup --config rollup.config.mjs && tsc --project tsconfig.build.json --emitDeclarationOnly",
