--- a/packages/openapi-typescript-plugin/package.json
+++ b/packages/openapi-typescript-plugin/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@openapi-qraft/openapi-typescript-plugin",
-  "version": "1.0.4",
+  "version": "1.0.5-beta.0",
   "type": "module",
   "scripts": {
     "build": "tsc --project tsconfig.build.json",
