--- a/packages/tanstack-query-react-plugin/package.json
+++ b/packages/tanstack-query-react-plugin/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@openapi-qraft/tanstack-query-react-plugin",
-  "version": "1.11.0",
+  "version": "1.12.0-beta.0",
   "type": "module",
   "scripts": {
     "build": "tsc --project tsconfig.build.json",
