--- a/packages/openapi-typescript-plugin/package.json
+++ b/packages/openapi-typescript-plugin/package.json
@@ -31,8 +31,8 @@
     "typescript": "^5.3.3"
   },
   "devDependencies": {
-    "@openapi-qraft/eslint-config": "workspace:~",
-    "@openapi-qraft/test-fixtures": "workspace:~",
+    "@openapi-qraft/eslint-config": "workspace:*",
+    "@openapi-qraft/test-fixtures": "workspace:*",
     "@types/node": "^18.19.4",
     "eslint": "^9.0.0",
     "memfs": "^4.9.2",
