--- a/packages/react-client/package.json
+++ b/packages/react-client/package.json
@@ -15,11 +15,11 @@
   },
   "sideEffects": false,
   "devDependencies": {
-    "@openapi-qraft/cli": "workspace:~",
-    "@openapi-qraft/eslint-config": "workspace:~",
+    "@openapi-qraft/cli": "workspace:*",
+    "@openapi-qraft/eslint-config": "workspace:*",
     "@openapi-qraft/openapi-typescript-plugin": "workspace:^",
-    "@openapi-qraft/rollup-config": "workspace:~",
-    "@openapi-qraft/test-fixtures": "workspace:~",
+    "@openapi-qraft/rollup-config": "workspace:*",
+    "@openapi-qraft/test-fixtures": "workspace:*",
     "@tanstack/react-query": "^5.17.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
