chore: improve `dev` scripts

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -4,7 +4,7 @@
   "description": "CLI for generating typed Tanstack Query React Hooks and services from OpenAPI Schemas, improving type safety in React apps",
   "scripts": {
     "build": "tsc --project tsconfig.build.json",
-    "dev": "yarn build --watch",
+    "dev": "yarn build --watch --noEmitOnError false",
     "test": "vitest run",
     "typecheck": "tsc --noEmit",
     "lint": "eslint",
