--- a/turbo.json
+++ b/turbo.json
@@ -14,6 +14,8 @@
     "typecheck": {
       "cache": true,
       "dependsOn": [
+        "^codegen",
+        "codegen",
         "^build"
       ]
     },
