chore: update alias resolution in `tsconfig.json` and `vitest.config.ts` to simplify contributors experience

--- a/packages/react-client/tsconfig.build.json
+++ b/packages/react-client/tsconfig.build.json
@@ -5,6 +5,7 @@
     "declarationDir": "dist/types",
     "declaration": true,
     "declarationMap": true,
+    "paths": {}
   },
   "include": ["src/**/*"],
   "exclude": [
