feat: add support for `--operation-name-modifier` option

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "ESNext",
     "module": "NodeNext",
-    "lib": ["ES2019"],
+    "lib": ["ES2019", "ESNext.Array"],
     "moduleResolution": "NodeNext",
     "sourceMap": true,
     "esModuleInterop": true,
