chore: replace `@trivago/prettier-plugin-sort-imports` with `@ianvs/prettier-plugin-sort-imports` in favour of supporting `import ... with { type: 'json' }` syntax
(cherry picked from commit 522bfcff6089d780f193cc3e9a6b3fbcf47b3fe0)

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -4,7 +4,14 @@
   "trailingComma": "es5",
   "importOrderCaseInsensitive": true,
   "importOrderSeparation": true,
-  "importOrder": ["^react(.*)$","^@(.*)$", "<THIRD_PARTY_MODULES>", "^[./]"],
+  "importOrder": [
+    "<TYPES>^(node:)",
+    "<TYPES>",
+    "<TYPES>^[.]",
+    "<BUILTIN_MODULES>",
+    "<THIRD_PARTY_MODULES>",
+    "^[.]"
+  ],
   "importOrderParserPlugins": ["importAssertions", "typescript", "jsx"],
-  "plugins": ["@trivago/prettier-plugin-sort-imports"]
+  "plugins": ["@ianvs/prettier-plugin-sort-imports"]
 }
