--- a/packages/openapi-typescript-plugin/package.json
+++ b/packages/openapi-typescript-plugin/package.json
@@ -27,7 +27,7 @@
   },
   "dependencies": {
     "@openapi-qraft/plugin": "workspace:^",
-    "openapi-typescript": "7.0.0-next.11",
+    "openapi-typescript": "^7.3.0",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
