chore: add "write-package-version-file" script

--- a/packages/plugin/package.json
+++ b/packages/plugin/package.json
@@ -9,7 +9,8 @@
     "test": "vitest run",
     "typecheck": "tsc --noEmit",
     "lint": "eslint",
-    "clean": "rimraf dist/"
+    "clean": "rimraf dist/",
+    "write-package-version-file": "yarn exec ../../write-package-version-file.sh"
   },
   "exports": {
     "./package.json": "./package.json",
