--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -12,7 +12,7 @@
   ],
   "linked": [],
   "access": "public",
-  "baseBranch": "origin/main",
+  "baseBranch": "origin/versions/1.13.x",
   "updateInternalDependencies": "patch",
   "ignore": ["@openapi-qraft/e2e", "playground", "openapi-qraft-website"]
 }
