Revert "chore: change `baseBranch` to `versions/1.13.x`"
This reverts commit 5b0299177afa10e2747d0a5c70945f4083e5d37a.

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -12,7 +12,7 @@
   ],
   "linked": [],
   "access": "public",
-  "baseBranch": "origin/versions/1.13.x",
+  "baseBranch": "origin/main",
   "updateInternalDependencies": "patch",
   "ignore": ["@openapi-qraft/e2e", "playground", "openapi-qraft-website"]
 }
