chore(openapi-typescript-plugin): add `getExportedNames(...)` tests

--- a/packages/openapi-typescript-plugin/tsconfig.build.json
+++ b/packages/openapi-typescript-plugin/tsconfig.build.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "noEmit": false,
     "declaration": true,
-    "declarationMap": true
+    "declarationMap": true,
+    "resolveJsonModule": false
   },
   "exclude": ["src/**/*.spec.ts", "src/**/*.test.ts", "src/tmp/**", "src/__snapshots__/**/*"]
 }
