chore: add `codegen` to `lint` script dependencies

--- a/turbo.json
+++ b/turbo.json
@@ -27,7 +27,7 @@
     },
     "lint": {
       "cache": true,
-      "dependsOn": ["write-package-version-file", "^build"]
+      "dependsOn": ["write-package-version-file", "codegen", "^build"]
     },
     "clean": {
       "cache": false
