--- a/e2e/package.json
+++ b/e2e/package.json
@@ -13,7 +13,7 @@
   },
   "packageManager": "yarn@3.5.0",
   "devDependencies": {
-    "rimraf": "~5.0.0",
+    "rimraf": "^5.0.10",
     "verdaccio": "^5.30.2"
   }
 }
