chore(react-client): add Codemode for migration from v1 to v2

--- a/packages/react-client/tsconfig.json
+++ b/packages/react-client/tsconfig.json
@@ -15,6 +15,7 @@
   "include": ["src/**/*"],
   "exclude": [
     "**/node_modules",
-    "**/.*/"
+    "**/.*/",
+    "src/tests/fixtures/migrate-to-v2-codemod/**/*"
   ]
 }
