--- a/packages/react-client/package.json
+++ b/packages/react-client/package.json
@@ -24,11 +24,13 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.5.2",
+    "@types/jscodeshift": "^0.11.11",
     "@types/react": "^18.2.47",
     "@vitejs/plugin-react": "latest",
     "@vitest/coverage-v8": "^1.1.3",
     "eslint": "^9.0.0",
     "globals": "^15.0.0",
+    "jscodeshift": "^17.0.0",
     "jsdom": "latest",
     "msw": "^2.0.12",
     "prettier": "^3.3.3",
