chore(devops): change job name

--- a/.github/workflows/docs-validation.yml
+++ b/.github/workflows/docs-validation.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   install:
-    name: Lint and Build
+    name: Lint and Build Docs
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repo
