chore(tanstack-query-react-types): fix package `publishConfig`

--- a/packages/tanstack-query-react-types/package.json
+++ b/packages/tanstack-query-react-types/package.json
@@ -41,5 +41,8 @@
     "!src/**/__snapshots__/**",
     "!src/**/*.test.*",
     "!src/**/*.spec.*"
-  ]
+  ],
+  "publishConfig": {
+    "access": "public"
+  }
 }
