chore: update `publishConfig.registry`

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -75,6 +75,7 @@
     "TanStack Query"
   ],
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
   }
 }
