--- a/packages/react-client/package.json
+++ b/packages/react-client/package.json
@@ -109,6 +109,7 @@
     "react-query"
   ],
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
   }
 }
