--- a/packages/tanstack-query-react-types/package.json
+++ b/packages/tanstack-query-react-types/package.json
@@ -43,6 +43,7 @@
     "!src/**/*.spec.*"
   ],
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
   }
 }
