--- a/packages/plugin/package.json
+++ b/packages/plugin/package.json
@@ -53,6 +53,7 @@
     "!src/**/*.spec.*"
   ],
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
   }
 }
