Revert "chore: update `publishConfig.registry`"
This reverts commit a6c2feaf19ab3ff3fb7113d6d1a1c1f9e2243a53.

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -75,7 +75,6 @@
     "TanStack Query"
   ],
   "publishConfig": {
-    "access": "public",
-    "registry": "https://registry.npmjs.org/"
+    "access": "public"
   }
 }
