--- a/packages/react-client/package.json
+++ b/packages/react-client/package.json
@@ -109,7 +109,6 @@
     "react-query"
   ],
   "publishConfig": {
-    "access": "public",
-    "registry": "https://registry.npmjs.org/"
+    "access": "public"
   }
 }
