--- a/packages/plugin/package.json
+++ b/packages/plugin/package.json
@@ -53,7 +53,6 @@
     "!src/**/*.spec.*"
   ],
   "publishConfig": {
-    "access": "public",
-    "registry": "https://registry.npmjs.org/"
+    "access": "public"
   }
 }
