--- a/packages/tanstack-query-react-types/package.json
+++ b/packages/tanstack-query-react-types/package.json
@@ -43,7 +43,6 @@
     "!src/**/*.spec.*"
   ],
   "publishConfig": {
-    "access": "public",
-    "registry": "https://registry.npmjs.org/"
+    "access": "public"
   }
 }
