--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@openapi-qraft/cli",
   "version": "2.0.0-next.8",
-  "description": "CLI for generating typed Tanstack Query React Hooks and services from OpenAPI Schemas, improving type safety in React apps",
+  "description": "CLI for generating typed TanStack Query React Hooks and services from OpenAPI Document, improving type safety in React apps",
   "scripts": {
     "build": "tsc --project tsconfig.build.json",
     "dev": "yarn build --watch --noEmitOnError false",
