--- a/packages/react-client/package.json
+++ b/packages/react-client/package.json
@@ -24,25 +24,25 @@
     "@openapi-qraft/rollup-config": "workspace:*",
     "@openapi-qraft/tanstack-query-react-plugin": "workspace:*",
     "@openapi-qraft/test-fixtures": "workspace:*",
-    "@tanstack/react-query": "^5.17.3",
+    "@tanstack/react-query": "^5.56.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.5.2",
     "@types/jscodeshift": "^0.11.11",
-    "@types/react": "^18.2.47",
-    "@vitejs/plugin-react": "latest",
-    "@vitest/coverage-v8": "^1.1.3",
-    "eslint": "^9.0.0",
-    "globals": "^15.0.0",
+    "@types/react": "^18.3.5",
+    "@vitejs/plugin-react": "^4.3.1",
+    "@vitest/coverage-v8": "^1.6.0",
+    "eslint": "^9.10.0",
+    "globals": "^15.9.0",
     "jscodeshift": "^17.0.0",
-    "jsdom": "latest",
-    "msw": "^2.0.12",
+    "jsdom": "^25.0.0",
+    "msw": "^2.4.7",
     "prettier": "^3.3.3",
-    "query-string": "^8.1.0",
-    "react": "^18.2.0",
+    "query-string": "^8.2.0",
+    "react": "^18.3.1",
     "rimraf": "^5.0.10",
-    "rollup": "~4.18.0",
-    "vitest": "^1.4.0"
+    "rollup": "~4.21.3",
+    "vitest": "^1.6.0"
   },
   "peerDependencies": {
     "@tanstack/query-core": "^5.0.0",
