--- a/packages/openapi-typescript-plugin/package.json
+++ b/packages/openapi-typescript-plugin/package.json
@@ -39,6 +39,14 @@
     "rimraf": "^5.0.10",
     "vitest": "^2.1.8"
   },
+  "peerDependencies": {
+    "commander": "^11.1.0"
+  },
+  "peerDependenciesMeta": {
+    "commander": {
+      "optional": false
+    }
+  },
   "files": [
     "dist",
     "src",
