--- a/packages/plugin/package.json
+++ b/packages/plugin/package.json
@@ -44,6 +44,14 @@
     "typescript": "^5.6.2",
     "vitest": "^2.1.8"
   },
+  "peerDependencies": {
+    "commander": "^11.1.0"
+  },
+  "peerDependenciesMeta": {
+    "commander": {
+      "optional": false
+    }
+  },
   "files": [
     "dist",
     "src",
