chore(devops): upgrade `check-spelling/check-spelling` action up to `v0.0.24`

--- a/.github/workflows/spelling.yml
+++ b/.github/workflows/spelling.yml
@@ -59,19 +59,19 @@ name: Check Spelling
 on:
   push:
     branches:
-      - "**"
+    - "**"
     tags-ignore:
-      - "**"
+    - "**"
   pull_request_target:
     branches:
-      - "**"
+    - "**"
     types:
-      - 'opened'
-      - 'reopened'
-      - 'synchronize'
+    - 'opened'
+    - 'reopened'
+    - 'synchronize'
   issue_comment:
     types:
-      - 'created'
+    - 'created'
 
 jobs:
   spelling:
@@ -90,31 +90,31 @@ jobs:
       # note: If you use only_check_changed_files, you do not want cancel-in-progress
       cancel-in-progress: true
     steps:
-      - name: check-spelling
-        id: spelling
-        uses: check-spelling/check-spelling@v0.0.22
-        with:
-          suppress_push_for_open_pull_request: ${{ github.actor != 'dependabot[bot]' && 1 }}
-          checkout: true
-          check_file_names: 1
-          spell_check_this: check-spelling/spell-check-this@prerelease
-          post_comment: 0
-          use_magic_file: 1
-          report-timing: 1
-          warnings: bad-regex,binary-file,deprecated-feature,large-file,limited-references,no-newline-at-eof,noisy-file,non-alpha-in-dictionary,token-is-substring,unexpected-line-ending,whitespace-in-dictionary,minified-file,unsupported-configuration,no-files-to-check
-          experimental_apply_changes_via_bot: 1
-          use_sarif: ${{ (!github.event.pull_request || (github.event.pull_request.head.repo.full_name == github.repository)) && 1 }}
-          check_extra_dictionaries: ''
-          extra_dictionary_limit: 20
-          extra_dictionaries:
-            cspell:software-terms/dict/softwareTerms.txt
-            cspell:npm/dict/npm.txt
-            cspell:filetypes/filetypes.txt
-            cspell:typescript/dict/typescript.txt
-            cspell:node/dict/node.txt
-            cspell:shell/dict/shell-all-words.txt
-            cspell:html/dict/html.txt
-            cspell:fullstack/dict/fullstack.txt
+    - name: check-spelling
+      id: spelling
+      uses: check-spelling/check-spelling@v0.0.24
+      with:
+        suppress_push_for_open_pull_request: ${{ github.actor != 'dependabot[bot]' && 1 }}
+        checkout: true
+        check_file_names: 1
+        spell_check_this: check-spelling/spell-check-this@prerelease
+        post_comment: 0
+        use_magic_file: 1
+        report-timing: 1
+        warnings: bad-regex,binary-file,deprecated-feature,large-file,limited-references,no-newline-at-eof,noisy-file,non-alpha-in-dictionary,token-is-substring,unexpected-line-ending,whitespace-in-dictionary,minified-file,unsupported-configuration,no-files-to-check
+        experimental_apply_changes_via_bot: 1
+        use_sarif: ${{ (!github.event.pull_request || (github.event.pull_request.head.repo.full_name == github.repository)) && 1 }}
+        #check_extra_dictionaries: ''
+        extra_dictionary_limit: 20
+        extra_dictionaries:
+          cspell:software-terms/dict/softwareTerms.txt
+          cspell:npm/dict/npm.txt
+          cspell:filetypes/filetypes.txt
+          cspell:typescript/dict/typescript.txt
+          cspell:node/dict/node.txt
+          cspell:shell/dict/shell-all-words.txt
+          cspell:html/dict/html.txt
+          cspell:fullstack/dict/fullstack.txt
 
   comment-push:
     name: Report (Push)
@@ -125,12 +125,12 @@ jobs:
       contents: write
     if: (success() || failure()) && needs.spelling.outputs.followup && github.event_name == 'push'
     steps:
-      - name: comment
-        uses: check-spelling/check-spelling@v0.0.22
-        with:
-          checkout: true
-          spell_check_this: check-spelling/spell-check-this@prerelease
-          task: ${{ needs.spelling.outputs.followup }}
+    - name: comment
+      uses: check-spelling/check-spelling@v0.0.24
+      with:
+        checkout: true
+        spell_check_this: check-spelling/spell-check-this@prerelease
+        task: ${{ needs.spelling.outputs.followup }}
 
   comment-pr:
     name: Report (PR)
@@ -142,13 +142,13 @@ jobs:
       pull-requests: write
     if: (success() || failure()) && needs.spelling.outputs.followup && contains(github.event_name, 'pull_request')
     steps:
-      - name: comment
-        uses: check-spelling/check-spelling@v0.0.22
-        with:
-          checkout: true
-          spell_check_this: check-spelling/spell-check-this@prerelease
-          task: ${{ needs.spelling.outputs.followup }}
-          experimental_apply_changes_via_bot: 1
+    - name: comment
+      uses: check-spelling/check-spelling@v0.0.24
+      with:
+        checkout: true
+        spell_check_this: check-spelling/spell-check-this@prerelease
+        task: ${{ needs.spelling.outputs.followup }}
+        experimental_apply_changes_via_bot: 1
 
   update:
     name: Update PR
@@ -158,17 +158,17 @@ jobs:
       actions: read
     runs-on: ubuntu-latest
     if: ${{
-      github.event_name == 'issue_comment' &&
-      github.event.issue.pull_request &&
-      contains(github.event.comment.body, '@check-spelling-bot apply')
+        github.event_name == 'issue_comment' &&
+        github.event.issue.pull_request &&
+        contains(github.event.comment.body, '@check-spelling-bot apply')
       }}
     concurrency:
       group: spelling-update-${{ github.event.issue.number }}
       cancel-in-progress: false
     steps:
-      - name: apply spelling updates
-        uses: check-spelling/check-spelling@v0.0.22
-        with:
-          experimental_apply_changes_via_bot: 1
-          checkout: true
-          ssh_key: "${{ secrets.CHECK_SPELLING }}"
+    - name: apply spelling updates
+      uses: check-spelling/check-spelling@v0.0.24
+      with:
+        experimental_apply_changes_via_bot: 1
+        checkout: true
+        ssh_key: "${{ secrets.CHECK_SPELLING }}"
