--- a/.github/workflows/spelling.yml
+++ b/.github/workflows/spelling.yml
@@ -106,15 +106,20 @@ jobs:
           use_sarif: ${{ (!github.event.pull_request || (github.event.pull_request.head.repo.full_name == github.repository)) && 1 }}
           check_extra_dictionaries: ''
           extra_dictionary_limit: 20
+          dictionary_source_prefixes: >
+            {
+              "cspell": "https://raw.githubusercontent.com/streetsidesoftware/cspell-dicts/refs/heads/main/dictionaries/"
+            }
           extra_dictionaries:
             cspell:software-terms/dict/softwareTerms.txt
             cspell:npm/dict/npm.txt
-            cspell:filetypes/filetypes.txt
+            cspell:filetypes/src/filetypes.txt
             cspell:typescript/dict/typescript.txt
             cspell:node/dict/node.txt
             cspell:shell/dict/shell-all-words.txt
             cspell:html/dict/html.txt
             cspell:fullstack/dict/fullstack.txt
+            cspell:css/dict/css.txt
 
   comment-push:
     name: Report (Push)
