--- a/packages/tanstack-query-react-types/package.json
+++ b/packages/tanstack-query-react-types/package.json
@@ -26,7 +26,8 @@
   },
   "peerDependencies": {
     "@tanstack/query-core": "^5.0.0",
-    "@tanstack/react-query": "^5.0.0"
+    "@tanstack/react-query": "^5.0.0",
+    "react": "^18 || ^19"
   },
   "devDependencies": {
     "@openapi-qraft/eslint-config": "workspace:*",
