--- a/packages/tanstack-query-react-types/package.json
+++ b/packages/tanstack-query-react-types/package.json
@@ -24,6 +24,10 @@
       ]
     }
   },
+  "peerDependencies": {
+    "@tanstack/query-core": "^5.0.0",
+    "@tanstack/react-query": "^5.0.0"
+  },
   "devDependencies": {
     "@openapi-qraft/eslint-config": "workspace:*",
     "@openapi-qraft/rollup-config": "workspace:*",
