chore(tanstack-query-react-types): add `@tanstack/*` modules to "devDependencies" and upgrade it

--- a/packages/react-client/package.json
+++ b/packages/react-client/package.json
@@ -24,7 +24,8 @@
     "@openapi-qraft/rollup-config": "workspace:*",
     "@openapi-qraft/tanstack-query-react-plugin": "workspace:*",
     "@openapi-qraft/test-fixtures": "workspace:*",
-    "@tanstack/react-query": "^5.56.2",
+    "@tanstack/query-core": "^5.66.3",
+    "@tanstack/react-query": "^5.66.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.5.2",
