--- a/packages/tanstack-query-react-types/package.json
+++ b/packages/tanstack-query-react-types/package.json
@@ -31,6 +31,8 @@
   "devDependencies": {
     "@openapi-qraft/eslint-config": "workspace:*",
     "@openapi-qraft/rollup-config": "workspace:*",
+    "@tanstack/query-core": "^5.66.3",
+    "@tanstack/react-query": "^5.66.3",
     "eslint": "^9.16.0",
     "rimraf": "^5.0.10",
     "rollup": "~4.22.4",
