--- a/packages/react-client/package.json
+++ b/packages/react-client/package.json
@@ -50,6 +50,7 @@
     "react-dom": "^19.0.0",
     "rimraf": "^5.0.10",
     "rollup": "~4.22.4",
+    "typescript": "^5.6.2",
     "vitest": "^2.1.9"
   },
   "files": [
