--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -5,13 +5,14 @@
   "private": true,
   "type": "module",
   "dependencies": {
-    "@eslint/js": "^9.16.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "typescript-eslint": "^7.7.0"
+    "@eslint/js": "^9.20.0",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-prettier": "^5.2.3",
+    "globals": "^15.9.0",
+    "typescript-eslint": "^8.24.0"
   },
   "devDependencies": {
-    "eslint": "^9.16.0"
+    "eslint": "^9.20.1"
   },
   "exports": {
     "./package.json": "./package.json",
