--- a/packages/react-client/package.json
+++ b/packages/react-client/package.json
@@ -39,8 +39,8 @@
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.1",
     "@vitest/coverage-v8": "^2.1.8",
-    "eslint": "^9.16.0",
-    "globals": "^15.9.0",
+    "eslint": "^9.20.1",
+    "eslint-plugin-react-compiler": "19.0.0-beta-30d8a17-20250209",
     "jscodeshift": "^17.0.0",
     "jsdom": "^25.0.0",
     "msw": "^2.6.8",
